# ytypes

./: Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
capacity/: Cargo.toml  README.md
capacity/examples/: fixed_bounded_capacity.rs
capacity/src/: lib.rs
yuri/: Cargo.toml  README.md
yuri/benches/: bencher.rs
yuri/examples/: construct_uri.rs
yuri/src/: builder.rs  error.rs  lib.rs  parser.rs  percent.rs  uri.rs
yuri/src/parser/: authority.rs  fragment.rs  path.rs  query.rs  scheme.rs
yuri/src/uri/: authority.rs  fragment.rs  path.rs  query.rs  scheme.rs
yuri/test_data/valid/: rfc3986_s112.txt
