[package]
name = "capacity"
version = "0.1.1"
edition = "2021"
description = "Simple capacity type"
homepage = "https://github.com/yaws-rs/ytypes/tree/main/capacity"
keywords = ["capacity", "abstract", "builder"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/ytypes/tree/main/capacity"
categories = ["science"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
features = ["bounded"]

[dependencies]

[features]
bounded = []
default = ["bounded"]
std = []

[[example]]
name = "fixed_bounded_capacity"
required-features = ["bounded"]
