[package]
name = "yuri"
version = "0.1.0-absolut1"
edition = "2021"
description = "Parser & Builder for HTTP URI"
homepage = "https://github.com/yaws-rs/ytypes"
keywords = ["http", "uri", "builder", "parser"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/ytypes"
categories = ["science"]

[features]
default = ["std", "parser", "builder"]
alloc = []
parser = ["dep:logos"]
builder = []
std = []

[dependencies]
logos = { version = "0.14", optional = true, default-features = false, features = ["export_derive"] }

[dev-dependencies]
insta = { version = "1.38" }
rstest = { version = "0.19" }
criterion = { version = "0.5" }

#[[bench]]
#name = "bencher"
#required-features = ["parser", "builder"]
#harness = false

#[[example]]
#name = "yuri_builder"
#required-features = ["builder"]
#harness = false

#[[example]]
#name = "yuri_parser"
#required-features = ["parser"]
#harness = false
