[package]
name = "yuri"
version = "0.1.0-absolut2"
edition = "2021"
description = "no_std alloc-free URI Parser"
homepage = "https://github.com/yaws-rs/ytypes"
keywords = ["http", "uri", "builder", "parser"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/ytypes"
categories = ["science"]
exclude = ["assets/"]

[features]
default = ["std", "parser", "builder"]
alloc = []
parser = ["dep:logos"]
builder = []
std = []

[dependencies]
logos = { version = "0.14", optional = true, default-features = false, features = ["export_derive"] }

[dev-dependencies]
insta = { version = "1.38" }
rstest = { version = "0.19" }
criterion = { version = "0.5" }

[package.metadata.docs.rs]
features = ["std", "parser", "builder"]

[[bench]]
name = "bencher"
required-features = ["parser", "builder"]
harness = false

[[example]]
name = "construct_uri"
required-features = ["parser"]
harness = false
doc-scrape-examples = true
